--- a/app/src/main/res/layout/reminder_item.xml
+++ b/app/src/main/res/layout/reminder_item.xml
@@ -16,7 +16,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp">
+            android:padding="16dp"
+            >
 
             <TextView
                 android:layout_width="wrap_content"
