I added a parent view to have a replication of border

--- a/app/src/main/res/layout/reminder_item.xml
+++ b/app/src/main/res/layout/reminder_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:padding="16dp"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
@@ -15,18 +14,28 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            >
+            android:layout_height="match_parent"
+            android:paddingTop="1dp"
+            android:id="@+id/parentLayout"
+            android:background="@color/divider">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/reminderTitle"
-                android:textSize="16sp"
-                android:text="Sample Text"
-                android:textStyle="bold"
-                android:layout_centerHorizontal="true" />
+                android:padding="16dp"
+                android:background="@color/buttonText"
+                >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/reminderTitle"
+                    android:textSize="16sp"
+                    android:text="Sample Text"
+                    android:textStyle="bold"
+                    android:layout_centerHorizontal="true" />
+                
+            </RelativeLayout>
 
         </RelativeLayout>
 
