--- a/app/src/main/res/layout/activity_add_reminder.xml
+++ b/app/src/main/res/layout/activity_add_reminder.xml
@@ -2,14 +2,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/reminderContainer"
-    tools:context="com.serverus.paroah.activities.AddReminderActivity">
+    tools:context="com.serverus.paroah.activities.AddReminderActivity"
+    android:background="@color/parentBackground">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/app_bar"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:minHeight="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        app:theme="@style/ThemeOverlay.AppCompat.Light"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/title_layout">
+        android:id="@+id/title_layout"
+        android:layout_above="@+id/edit_text_desc"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="65dp"
+        >
 
         <EditText
             android:id="@+id/edit_text_title"
@@ -29,15 +47,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Please Enter Your Description"
-            android:layout_marginTop="91dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
             android:inputType="textMultiLine"
             android:lines="8"
             android:minLines="6"
             android:gravity="top|left"
             android:maxLines="10"
-            />
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
 
         <android.support.design.widget.TextInputLayout
@@ -45,9 +62,9 @@
             android:layout_height="wrap_content"
             android:id="@+id/date_layout"
             android:layout_below="@+id/edit_text_desc"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="20dp">
+            android:layout_toLeftOf="@+id/time_layout"
+            android:layout_toStartOf="@+id/time_layout"
+            >
 
             <EditText
                 android:layout_width="match_parent"
@@ -57,7 +74,8 @@
                 android:textAllCaps="false"
                 android:id="@+id/date_edit"
                 android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true" />
+                android:layout_centerHorizontal="true"
+                />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -65,10 +83,11 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:id="@+id/time_layout"
+            android:layout_marginRight="38dp"
+            android:layout_marginEnd="38dp"
             android:layout_below="@+id/edit_text_desc"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="20dp">
+            android:layout_alignParentEnd="true">
 
             <EditText
                 android:layout_width="match_parent"
@@ -78,18 +97,21 @@
                 android:textAllCaps="false"
                 android:id="@+id/time_edit"
                 android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true" />
+                android:layout_centerHorizontal="true"
+                />
 
         </android.support.design.widget.TextInputLayout>
 
         <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:text="Save"
             android:textAllCaps="false"
             android:id="@+id/save_btn"
+            android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true" />
+            android:textColor="@color/buttonText"
+            android:background="@color/buttonBackground"/>
 
 </RelativeLayout>
